argocd: use native http client, apply fallback on sync timeout, local ITs instance script (#193)